--- a/ceylon-maven-plugin/pom.xml
+++ b/ceylon-maven-plugin/pom.xml
@@ -4,10 +4,10 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.ceylon-lang</groupId>
-  <artifactId>ceylon-maven-tools</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>ceylon-maven-plugin</artifactId>
+  <packaging>maven-plugin</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Ceylon Maven Plugin Reactor</name>
+  <name>Ceylon Maven Plugin</name>
   <description>Maven Plugins for the Ceylon toolset (ceylonc, ceylond, ceylon etc)</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,9 +21,16 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-  <modules>
-      <module>ceylon-maven-plugin</module>
-      <module>ceylon-maven-test</module>
-  </modules>
-  
+  <dependencies>
+    <dependency>
+      <groupId>org.ceylon-lang</groupId>
+      <artifactId>ceylon-compiler</artifactId>
+      <version>0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-plugin-api</artifactId>
+      <version>3.0.4</version>
+    </dependency>  
+  </dependencies>
 </project>
